--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Weather Application</title>
+    <title>Weather Application</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="card">
         <h1 class="title">Check City Weather</h1>
-        
+
         <div class="search">
             <input type="text" placeholder="Enter city name" spellcheck="false">
             <button><img src="images/search.png"></button>
